<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Share.ShareActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/postToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/snippet_top_profile_bar" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/postToolbarLayout">

            <TextView
                android:id="@+id/createNewRecipeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/create_new_recipe_string"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/createNewRecipeTextView"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                android:padding="24dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/restaurantTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/searchImageView"
                            android:layout_width="35dp"
                            android:layout_height="50dp"
                            android:layout_alignRight="@+id/restaurantSearchableSpinner"
                            android:layout_marginEnd="4dp"
                            app:srcCompat="@android:drawable/ic_search_category_default" />

                        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                            android:id="@+id/restaurantSearchableSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="24dp"
                            android:background="@drawable/rounded_corners_edit_text_transparent"
                            app:hintText="@string/search_restaurant_string">

                        </com.toptoche.searchablespinnerlibrary.SearchableSpinner>

                    </RelativeLayout>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/recipeTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/rounded_corners_edit_text_transparent"
                        android:hint="@string/recipe_name_string"
                        android:inputType="text"
                        android:padding="4dp"
                        android:textSize="18sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/descriptionTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/rounded_corners_edit_text_transparent"
                        android:gravity="top|left"
                        android:hint="@string/description_string"
                        android:inputType="text"
                        android:paddingLeft="4dp"
                        android:paddingTop="8dp"
                        android:paddingRight="4dp"
                        android:textSize="18sp" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </RelativeLayout>

        <include layout="@layout/layout_bottom_navigation" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>