<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/merge"
    android:layout_width="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="261dp"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/recipesNumTextView"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="135dp"
            android:text="@string/zero_string"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/recipesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/recipes_string"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipesNumTextView" />

        <TextView
            android:id="@+id/followersNumTextView"
            android:layout_width="50dp"
            android:layout_height="23dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/zero_string"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/followingNumTextView"
            app:layout_constraintStart_toEndOf="@+id/recipesNumTextView"
            app:layout_constraintTop_toBottomOf="@+id/bioTextView" />

        <TextView
            android:id="@+id/followersTextView"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/followers_string"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/followingTextView"
            app:layout_constraintStart_toEndOf="@+id/recipesTextView"
            app:layout_constraintTop_toBottomOf="@+id/followersNumTextView" />

        <TextView
            android:id="@+id/followingNumTextView"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="135dp"
            android:layout_marginEnd="60dp"
            android:text="@string/zero_string"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/followingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="60dp"
            android:text="@string/following_string"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/followingNumTextView" />

        <ImageButton
            android:id="@+id/editProfileImageButton"
            android:layout_width="310dp"
            android:layout_height="38dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/followersTextView"
            app:layout_constraintVertical_bias="0.7"
            app:srcCompat="@drawable/ic_edit" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImageView"
            android:layout_width="74dp"
            android:layout_height="68dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:civ_border_color="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars[13]"
            tools:srcCompat="@tools:sample/avatars[10]" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <ProgressBar
                android:id="@+id/profileInforProgressBar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:visibility="invisible"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:text="Chef Random User"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImageView" />

        <TextView
            android:id="@+id/bioTextView"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="32dp"
            android:text="My bio!"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView" />


    </android.support.constraint.ConstraintLayout>
</merge>